--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f103c806690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3665bee610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f103c4c4490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f103c4c4690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3665914490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3665914690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f103ca8dcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f103ca8ded0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3665e75d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3665e75f10&gt;]</pre>
 </div>
 
 </div>
