--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3d31eba910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8faee865d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3d31bec150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3d31bec350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8faeba4290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8faeba4490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3d32144ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3d32144cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8faf106ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8faf106cd0&gt;]</pre>
 </div>
 
 </div>
