--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21ae3cec90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3c9f090790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21ae0f6410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21ae0f6610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c9f0d6350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3c9f0d6550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21ae655c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21ae655e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c9f634c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3c9f634e10&gt;]</pre>
 </div>
 
 </div>
