--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6beef67950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8d7bf7a610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6beec7d4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6beec7d6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d7bc8f1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d7bc8f050&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6bef1dcd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6bef1dcf50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d7c56ae90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d7c512990&gt;]</pre>
 </div>
 
 </div>
