--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe5656d1790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f58e2039710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5653df250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe5653df050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f58e1d53490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f58e1d53690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe565941b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe565941910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f58e22b7d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f58e22b7f90&gt;]</pre>
 </div>
 
 </div>
