--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0cc52495d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2f5211eed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0cc4c38650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0cc4c38850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2f51dd0510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2f51dd0710&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0cc54bdf90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0cc54cc1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2f5238de90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2f523990d0&gt;]</pre>
 </div>
 
 </div>
