--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f500ad710d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f85a4468150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f500aa84310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f500aa84510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85a4165250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85a4165450&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f500afe0c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f500afe0e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85a46b4b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85a46b4d50&gt;]</pre>
 </div>
 
 </div>
