--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f11116d7c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd285c43c50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1111393510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1111393710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd28596d350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd28596d550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f111195be90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f11119670d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd285f20a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd285ecae50&gt;]</pre>
 </div>
 
 </div>
