--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f46a0cfb990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3093977450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46a0a2b2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46a0a2b4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f30936a9550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f30936a9750&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46a0f8bbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46a0f8bdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3093bf7dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3093bf7fd0&gt;]</pre>
 </div>
 
 </div>
