--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4e3cc62f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f214b05f2d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e3c981450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e3c981650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f214ad96290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f214ad96490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e3cf36910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4e3cee0f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f214b65c190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f214b623d90&gt;]</pre>
 </div>
 
 </div>
