--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f409d2127d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb3fbc0710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f409cf38410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f409cf38610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb3f5ac490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb3f5ac6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f409d49ad10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f409d49af10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb3fe36d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb3fe36fd0&gt;]</pre>
 </div>
 
 </div>
