--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc5de731610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fed52c52d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc5de41f4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc5de3ee7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fed52960550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fed52960750&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc5de9afd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc5de9b8fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fed52ebee10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fed52ebefd0&gt;]</pre>
 </div>
 
 </div>
