--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcfd9856d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbbf208e510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfd98a1310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfd98a1510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbbf26214d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbbf26216d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfd9e02c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfd9e02e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbbf2bebdd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbbf2bebfd0&gt;]</pre>
 </div>
 
 </div>
