--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff31bef1c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fda371f7590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff31bc1b310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff31bc1b510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fda36f18510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fda36f18710&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff31c178b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff31c178d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fda37478e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fda374840d0&gt;]</pre>
 </div>
 
 </div>
