--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f157c42b210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff5bc6f5690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f157c1562d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f157c1564d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff5bc3da450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff5bc3da650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f157c6b3b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f157c6b3d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff5bc977d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff5bc977f50&gt;]</pre>
 </div>
 
 </div>
