--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff774813b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c41bb0c50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7744d1450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff7744d1690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c421ba310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c421ba510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff774a91dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff774a91fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c4271bc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c4271be90&gt;]</pre>
 </div>
 
 </div>
