--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f54edf25690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa4b60b2610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54edbf9410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54edbf9610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4b5dd5290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa4b5dd5490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54ee1e9890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54ee191f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4b6329bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa4b6329dd0&gt;]</pre>
 </div>
 
 </div>
