--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa4b60b2610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f726f061690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4b5dd5290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4b5dd5490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f726f087d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f726f3ae510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa4b6329bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa4b6329dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f726f5ec890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f726f5f4e50&gt;]</pre>
 </div>
 
 </div>
