--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f97998fa950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f36f5b26d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f97995aa1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f97995aa3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f36f584f090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f36f5842450&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9799b6ca50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9799b6cc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f36f5da2a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f36f5daad10&gt;]</pre>
 </div>
 
 </div>
