--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f36f5b26d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7b93df8b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f36f584f090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f36f5842450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b92fb6510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7b92fb6710&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f36f5da2a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f36f5daad10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b93514d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7b93514f90&gt;]</pre>
 </div>
 
 </div>
